--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is BY."
+description: "Hey, this is Autuan."
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -18,11 +18,12 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>冰冻三尺 非一日之寒<br>
     积土成山 非斯须之作</p></blockquote>
 
-    <p>Hey，我是<strong>晚成</strong>，一只苦逼的Java开发,现在上海工作。</p>
+    <p>Hey，我是<strong>晚成</strong>，上海码农社畜。</p>
 
     <p>平时最大的爱好是打游戏和发呆</p>
 
     <p>这是基于GithubPages搭建的个人博客,欢迎大家访问并建立友情链接</p>
+    
     <p>有任何问题,都可以提出来交流~~~</p>
 
     <p></p>
